--- a/src/Authentication/LoginForm/Form.module.css
+++ b/src/Authentication/LoginForm/Form.module.css
@@ -42,12 +42,16 @@
   padding: 15px;
   width: 100%;
   border-radius: 30px;
-  margin: 2%;
   border: none;
   color: white;
   font-size: large;
+  margin-top: 5%;
 }
 .err {
+  color: red;
+  margin-top: -5%;
+}
+.err2 {
   color: red;
   margin-top: -5%;
 }
