--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -1,198 +1,231 @@
 .chatContainer {
-    width: 100vw;
-    height: 100vh;
-    background: #fff;
-    color: #212121;
-    font-family: "Open Sans", sans-serif;
-    display: grid;
-    place-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+  color: #212121;
+  font-family: "Open Sans", sans-serif;
+  display: grid;
+  place-items: center;
 }
 
 body {
-    margin: 0%;
-    padding: 0%;
+  margin: 0%;
+  padding: 0%;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
 
 .joinChatContainer {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .joinChatContainer h3 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 .joinChatContainer input {
-    width: 210px;
-    height: 40px;
-    margin: 7px;
-    border: 2px solid #7cc1f9;
-    border-radius: 5px;
-    padding: 5px;
-    font-size: 16px;
+  width: 210px;
+  height: 40px;
+  margin: 7px;
+  border: 2px solid #7cc1f9;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
 }
 
 .joinChatContainer button {
-    width: 225px;
-    height: 50px;
-    margin: 7px;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    font-size: 16px;
-    background: #7cc1f9;
-    color: #fff;
-    cursor: pointer;
+  width: 225px;
+  height: 50px;
+  margin: 7px;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 16px;
+  background: #7cc1f9;
+  color: #fff;
+  cursor: pointer;
 }
 
 .joinChatContainer button:hover {
-    background: #7cc1f9;
+  background: #7cc1f9;
 }
 
 .chat-window {
-    width: 700px;
-    height: 600px;
-    border: #7cc1f9 solid 1px;
+  width: 700px;
+  height: 600px;
+  border: #7cc1f9 solid 1px;
 }
-
+.bob {
+  background-color: #212121;
+}
 .chat-window .chat-header {
-    height: 10%;
-    cursor: pointer;
-    text-align: right;
-    padding: 2%;
+  height: 10%;
+  cursor: pointer;
+  text-align: right;
+  padding: 2%;
 }
-
 
 .chat-window .chat-body {
-    height: 80%;
-    background: #fff;
-    position: relative;
+  height: 80%;
+  background: #fff;
+  position: relative;
 }
 
 .chat-window .chat-body .message-container {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-
 .chat-window .chat-body .message-container::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 .chat-window .chat-body .message {
-    height: auto;
-    padding: 10px;
-    display: flex;
+  height: auto;
+  padding: 10px;
+  display: flex;
+}
+.chat-window .chat-body .message2 {
+  height: auto;
+  padding: 10px;
+  display: flex;
 }
 
 .chat-window .chat-body .message .message-content {
-    width: auto;
-    height: auto;
-    min-height: 40px;
-    max-width: 120px;
-    background-color: #7cc1f9;
-    border-radius: 5px;
-    color: white;
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
-    margin-left: 5px;
-    padding-right: 5px;
-    padding-left: 5px;
-    overflow-wrap: break-word;
-    word-break: break-word;
+  width: fit-content;
+  height: auto;
+  min-height: 30px;
+  display: flex;
+  min-width: 20%;
+  background-color: #7cc1f9;
+  border-radius: 5px;
+  color: white;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  font-size: 18px;
 }
 
-#you {
-    justify-content: flex-start;
+.chat-window .chat-body .message2 .message-content {
+  width: fit-content;
+  height: auto;
+  min-height: 30px;
+  display: flex;
+  min-width: 20%;
+  background-color: #7cc1f9;
+  border: 1px solid #7cc1f9;
+  border-radius: 5px;
+  color: white;
+  align-items: center;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  font-size: 18px;
 }
-
-#you .message-content {
-    justify-content: flex-start;
-}
-
-#you .message-meta {
-    justify-content: flex-start;
-    margin-left: 5px;
-}
-
 #other {
-    justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 #other .message-content {
-    justify-content: flex-end;
-    background-color: #7cc1f9;
+  justify-content: flex-start;
+  background-color: #ebe8e8;
+  color: #1f1f1f;
 }
 
 #other .message-meta {
-    justify-content: flex-end;
-    margin-right: 5px;
+  justify-content: flex-start;
+  margin-left: 5px;
 }
 
+#you {
+  justify-content: flex-end;
+  font-weight: 700;
+}
+
+#you .message-content {
+  justify-content: flex-end;
+  background-color: #5db1f5;
+}
+
+#you .message-meta {
+  justify-content: flex-end;
+  margin-right: 5px;
+}
+.auth {
+  width: 100%;
+  font-size: 10px;
+  color: rgb(180, 180, 180);
+}
 .message-meta #author {
-    margin-left: 10px;
-    font-weight: bold;
+  margin-left: 10px;
+  font-weight: bold;
 }
 
 .chat-window .chat-body .message .message-meta {
-    display: flex;
-    font-size: 12px;
+  display: flex;
+  font-size: 12px;
+}
+.chat-window .chat-body .message2 .message-meta {
+  display: flex;
+  font-size: 12px;
 }
 
 .chat-window .chat-footer {
-    padding: 1%;
-    height: 10%;
-    border: none;
-    display: flex;
-    background-color: #7cc1f9;
-    align-items: center;
+  padding: 1%;
+  height: 10%;
+  border: none;
+  display: flex;
+  background-color: #7cc1f9;
+  align-items: center;
 }
 
-.images{
-    width: 50%;
+.images {
+  width: 50%;
 }
-.logout{
-    width: 5%;
+.logout {
+  width: 5%;
 }
 .chat-window .chat-footer input {
-    height: 100%;
-    flex: 85%;
-    border: 0;
-    padding: 0 0.7em;
-    font-size: 1em;
+  height: 100%;
+  flex: 85%;
+  border: 0;
+  padding: 0 0.7em;
+  font-size: 1em;
 }
 
-.chat-window .chat-footer img{
-    color: #7cc1f9;
+.chat-window .chat-footer img {
+  color: #7cc1f9;
 }
 
 .chat-window .chat-footer button {
-    border: 0;
-    display: grid;
-    place-items: center;
-    cursor: pointer;
-    flex: 15%;
-    height: 100%;
-    background: transparent;
-    outline: none;
-    font-size: 25px;
-    color: lightgray;
+  border: 0;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  flex: 15%;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  font-size: 25px;
+  color: lightgray;
 }
 
-
-
-
 .chat-window .chat-footer button:hover {
-    color: #7cc1f9;
+  color: #7cc1f9;
 }
 
 .hide {
-    opacity: 0 !important;
+  opacity: 0 !important;
 }
