--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -42,7 +42,17 @@ body {
 .joinChatContainer button:hover {
   background: #7cc1f9;
 }
-
+.footer2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.footer2 p {
+  margin: 0;
+  color: white;
+  font-weight: bold;
+}
 .chatContainer {
   width: 100vw;
   height: 100vh;
@@ -50,7 +60,9 @@ body {
   display: grid;
   place-items: center;
 }
-
+.dir {
+  direction: rtl;
+}
 .chat-window {
   width: 98%;
   height: 700px;
