--- a/src/Settings/Navbar/Navbar.css
+++ b/src/Settings/Navbar/Navbar.css
@@ -1,6 +1,25 @@
 .allnav{
-    height: 550px;
+    height: 600px;
 }
 .sidebar-content{
     border-right: 1px solid rgb(199, 198, 198);
+}
+
+.colored{
+    color: #7cc1f9;
+    
+}
+.med{
+    
+    display: none;
+}
+.par{
+    display: none;
+}
+.med{
+    display: none;
+}
+
+.colord2 {
+    color: blue;
 }
