--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@ p {
 .modal-dialog {
   position: absolute;
   bottom: 0;
-  width: 60%;
+  width: 40%;
   left: 20px;
 }
 .modal-footer {
@@ -56,4 +56,8 @@ p {
   border-radius: 50%;
   margin-left: 0;
   margin-right: 5%;
+}
+.modal-body img {
+  width: 100%;
+  max-height: 300px;
 }
