--- a/src/style.css
+++ b/src/style.css
@@ -60,3 +60,19 @@ p {
   width: 100%;
   max-height: 300px;
 }
+::-webkit-scrollbar {
+  background: #7cc1f9;
+  width: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #7cc1f9;
+}
+/* Handle */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #7cc1f9;
+}
