--- a/src/Chat/Chat.css
+++ b/src/Chat/Chat.css
@@ -212,6 +212,11 @@ body {
   color: gray;
   overflow: hidden;
 }
+
+.replayText img{
+  margin-left: 10px;
+}
+
 .exit {
   cursor: pointer;
   margin-right: 5%;
