--- a/src/Settings/Media/Media.css
+++ b/src/Settings/Media/Media.css
@@ -1,18 +1,27 @@
-.media{
-    margin-left: 5%;
-    width: 100%;    
-    height: 600px;
-    display: grid;
-    overflow: scroll;
-    gap: 1%;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+.media {
+  margin-left: 5%;
+  width: 100%;
+  height: 600px;
+  display: grid;
+  overflow: scroll;
+  gap: 1%;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
 }
 
 .media::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
-.setting-image{
-    width: 100%;
-    height: 250px;
+.setting-image {
+  width: 100%;
+  height: 250px;
+}
+.noData {
+  font-family: Lato;
+  text-align: center;
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
